--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>AC-Tech</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
+    <link rel="stylesheet" href="style.css">
   </head>
   <body>
     <header class="container">
@@ -88,8 +89,8 @@
                 </p>
             </div>
             <div class="container">
-                <div class="row">
-                    <div class="col-6">
+                <div class="row g-3">
+                    <div class="col-md-6">
                     <div class="card mb-3" style="max-width: 540px;">
                         <div class="row g-0">
                           <div class="col-md-4">
@@ -98,14 +99,14 @@
                           <div class="col-md-8">
                             <div class="card-body">
                               <h5 class="card-title">Fundamental Of UI/UX Design</h5>
-                              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card.</p>
+                              <p class="card-text">Some quick example text to build on the card title .</p>
                               <p class="card-text"><small class="text-primary"><b>Price : 20$</b></small></p>
                             </div>
                           </div>
                         </div>
                       </div>
                     </div>
-                    <div class="col-6">
+                    <div class="col-md-6">
                     <div class="card mb-3" style="max-width: 540px;">
                         <div class="row g-0">
                           <div class="col-md-4">
@@ -121,7 +122,7 @@
                         </div>
                       </div>
                     </div>
-                    <div class="col-6">
+                    <div class="col-md-6">
                     <div class="card mb-3" style="max-width: 540px;">
                         <div class="row g-0">
                           <div class="col-md-4">
@@ -137,7 +138,7 @@
                         </div>
                       </div>
                     </div>
-                    <div class="col-6">
+                    <div class="col-md-6">
                     <div class="card mb-3" style="max-width: 540px;">
                         <div class="row g-0">
                           <div class="col-md-4">
@@ -153,7 +154,7 @@
                         </div>
                       </div>
                     </div>
-                    <div class="col-6">
+                    <div class="col-md-6">
                     <div class="card mb-3" style="max-width: 540px;">
                         <div class="row g-0">
                           <div class="col-md-4">
@@ -169,7 +170,7 @@
                         </div>
                       </div>
                     </div>
-                    <div class="col-6">
+                    <div class="col-md-6">
                     <div class="card mb-3" style="max-width: 540px;">
                         <div class="row g-0">
                           <div class="col-md-4">
@@ -265,6 +266,21 @@
             </div>
         </section>
         <!-- QS section end    -->
+        <section class="container syt text-center">
+          <!-- <div class="row g-2">
+            <div class="col-lg"> -->
+          <h2>Trusted by over 800+ companies</h2>
+          <div class="d-flex sy justify-content-between mt-4">
+            <img src="images/company/company-1.png" alt="">
+            <img src="images/company/company-2.png" alt="">
+            <img src="images/company/company-3.png" alt="">
+            <img src="images/company/company-4.png" alt="">
+            <img src="images/company/company-5.png" alt="">
+            <img src="images/company/company-6.png" alt="">
+          </div>
+          </div>
+        </div>
+        </section>
     </main>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>
   </body>
