--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>AC-Tech</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
     <link rel="stylesheet" href="style.css">
+    <script src="https://kit.fontawesome.com/27e83a6580.js" crossorigin="anonymous"></script>
   </head>
   <body>
     <header class="container">
@@ -282,6 +283,19 @@
         </div>
         </section>
     </main>
+    <!-- footer start  -->
+    <footer class="footer bg-dark text-light text-center mt-5 p-5">
+      <h2 class="pb-3">AC Tech</h2>
+      <small>
+        <p>Office 41, Zawaya Buildin, Ghala Muscat, 
+          <br> Sultanate of Oman</p>
+          <p>Privacy Ploicy  |   Terms of use</p>
+        </small>
+        <a href="https://www.facebook.com/" target="_blank" class="pe-3 color" rel=""><i class="fa-brands fa-facebook"></i></a>
+        <a href="https://web.whatsapp.com/" target="_blank" class="pe-3 color" rel=""><i class="fa-brands fa-whatsapp"></i></a>
+        <a href="https://www.instagram.com/" target="_blank" class="pe-3 color" rel=""><i class="fa-brands fa-instagram"></i></a>
+    </footer>
+    <!-- footer end  -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>
   </body>
 </html>
