--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>AC-Tech</title>
+    <title>Aidas Tech</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
     <link rel="stylesheet" href="style.css">
     <script src="https://kit.fontawesome.com/27e83a6580.js" crossorigin="anonymous"></script>
@@ -13,7 +13,7 @@
     <!-- nav bar start  -->
     <nav class="navbar navbar-expand-lg bg-light">
         <div class="container-fluid">
-          <a class="navbar-brand" href="#"><b>AC-Tech</b></a>
+          <a class="navbar-brand" href="#"><b>Aidas Tech</b></a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
@@ -285,7 +285,7 @@
     </main>
     <!-- footer start  -->
     <footer class="footer bg-dark text-light text-center mt-5 p-5">
-      <h2 class="pb-3">AC Tech</h2>
+      <h2 class="pb-3">Aidas Tech</h2>
       <small>
         <p>Office 41, Zawaya Buildin, Ghala Muscat, 
           <br> Sultanate of Oman</p>
