--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
                     <div class="card mb-3" style="max-width: 540px;">
                         <div class="row g-0">
                           <div class="col-md-4">
-                            <img src="images/course/course-1.png" class="img-fluid rounded-start" alt="...">
+                            <img src="images/course/course-1.png" class="img-fluid h-100 w-100 rounded-start" alt="...">
                           </div>
                           <div class="col-md-8">
                             <div class="card-body">
@@ -111,7 +111,7 @@
                     <div class="card mb-3" style="max-width: 540px;">
                         <div class="row g-0">
                           <div class="col-md-4">
-                            <img src="images/course/course-2.png" class="img-fluid rounded-start" alt="...">
+                            <img src="images/course/course-2.png" class="img-fluid h-100 w-100 rounded-start" alt="...">
                           </div>
                           <div class="col-md-8">
                             <div class="card-body">
@@ -127,7 +127,7 @@
                     <div class="card mb-3" style="max-width: 540px;">
                         <div class="row g-0">
                           <div class="col-md-4">
-                            <img src="images/course/course-3.png" class="img-fluid rounded-start" alt="...">
+                            <img src="images/course/course-3.png" class="img-fluid h-100 w-100 rounded-start" alt="...">
                           </div>
                           <div class="col-md-8">
                             <div class="card-body">
@@ -143,7 +143,7 @@
                     <div class="card mb-3" style="max-width: 540px;">
                         <div class="row g-0">
                           <div class="col-md-4">
-                            <img src="images/course/course-4.png" class="img-fluid rounded-start" alt="...">
+                            <img src="images/course/course-4.png" class="img-fluid h-100 w-100 rounded-start" alt="...">
                           </div>
                           <div class="col-md-8">
                             <div class="card-body">
@@ -159,7 +159,7 @@
                     <div class="card mb-3" style="max-width: 540px;">
                         <div class="row g-0">
                           <div class="col-md-4">
-                            <img src="images/course/course-5.png" class="img-fluid rounded-start" alt="...">
+                            <img src="images/course/course-5.png" class="img-fluid h-100 w-100 rounded-start" alt="...">
                           </div>
                           <div class="col-md-8">
                             <div class="card-body">
@@ -175,7 +175,7 @@
                     <div class="card mb-3" style="max-width: 540px;">
                         <div class="row g-0">
                           <div class="col-md-4">
-                            <img src="images/course/course-6.png" class="img-fluid w-100 rounded-start" alt="...">
+                            <img src="images/course/course-6.png" class="img-fluid h-100 w-100 rounded-start" alt="...">
                           </div>
                           <div class="col-md-8">
                             <div class="card-body">
